--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <style>
     img {
-      /* opacity: 0; */
+      opacity: 0;
     }
     .canvas canvas {
       position: fixed;
