--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     </div>
     <div class="w-1/2 h-screen flex flex-col justify-center ">
       <div class="links flex flex-col gap-10">
-        <a class="capitalize cursor-pointer transition-all hover:ml-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
+        <a class="capitalize cursor-pointer transition-all hover:pl-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
           <small class="text-xl tracking-normal">01.</small>
           gangs of wasseypur
         </a>
-        <a class="capitalize cursor-pointer transition-all hover:ml-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
+        <a class="capitalize cursor-pointer transition-all hover:pl-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
           <small class="text-xl tracking-normal">02.</small>
           bella ciao
         </a>
-        <a class="capitalize cursor-pointer transition-all hover:ml-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
+        <a class="capitalize cursor-pointer transition-all hover:pl-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
           <small class="text-xl tracking-normal">03.</small>
           Dark
         </a>
-        <a class="capitalize cursor-pointer transition-all hover:ml-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
+        <a class="capitalize cursor-pointer transition-all hover:pl-5 opacity-30 hover:opacity-100 block tracking-tighter text-[4vw]">
           <small class="text-xl tracking-normal">04.</small>
           sacred games
         </a>
