--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 </head>
 <body>
   <div class="main w-full h-screen bg-zinc-900 flex text-white">
-    <div class="canvas w-1/2 h-screen relative">
-      <div class="images w-[23vw] h-[32vw] absolute top-1/2 left-1/2 translate-x-[-50%] translate-y-[-50%] ">
-        <img class="absolute w-full h-full object-cover" src="/images/img1.jpg" alt="">
-        <!-- <img class="absolute w-full h-full object-cover" src="/images/img2.jpg" alt="">
-        <img class="absolute w-full h-full object-cover" src="/images/img3.jpg" alt="">
-        <img class="absolute w-full h-full object-cover" src="/images/img4.jpg" alt=""> -->
+    <div class="w-1/2 h-screen relative">
+      <div class="canvas relative w-[23vw] h-[32vw] bg-zinc-950">
+        <div class="images h-full w-full ">
+          <img class="absolute w-full h-full object-cover" src="/images/img1.jpg" alt="">
+          <img class="absolute w-full h-full object-cover" src="/images/img2.jpg" alt="">
+          <img class="absolute w-full h-full object-cover" src="/images/img3.jpg" alt="">
+          <img class="absolute w-full h-full object-cover" src="/images/img4.jpg" alt="">
+        </div>
       </div>
     </div>
     <div class="w-1/2 h-screen flex flex-col justify-center ">
