--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <div class="main w-full h-screen bg-zinc-900 flex text-white overflow-y-auto">
     <div class="w-1/2 h-screen flex items-center justify-center">
-      <div class="canvas relative w-[80%] h-[80%] ">
-        <div class="images h-full w-full ">
+      <div class="canvas relative w-[60%] h-[80%] ">
+        <div class="images h-full w-full object-cover ">
           <img class="absolute w-full h-full object-cover" src="/images/img1.jpg" alt="">
           <img class="absolute w-full h-full object-cover" src="/images/img2.jpg" alt="">
           <img class="absolute w-full h-full object-cover" src="/images/img3.jpg" alt="">
